Lottie animation on banner

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
     ],
     "semi": "off",
     "comma-dangle": ["error", "never"],
-    "object-curly-newline": ["error", "never"]
+    "object-curly-newline": ["error", { "multiline": true }]
   },
   "settings": {
     "import/resolver": {
